<resources>
    <string name="app_name">Adminibot</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">REGISTRO</string>

    <!-- user register -->
    <string name="register_title">Registrar</string>
    <string name="register_hint_name">Nombre</string>
    <string name="register_hint_last_name">Apellidos</string>
    <string name="register_hint_email">Email</string>
    <string name="action_bar_about_title">About</string>
    <string name="register_button_ok">OK</string>
    <string name="register_ok">El usuario se registro con exito!</string>
    <string name="register_failed">Se produjo un error, intentalo más tarde</string>

    <!-- login user -->
    <string name="title_activity_login">LOGIN</string>
    <string name="login_hint_password">Pasword</string>
    <string name="login_button_enter">Entrar</string>
    <string name="login_register_now_link">¡Registrate ahora!</string>
    <string name="title_activity_about_admini_bot">AboutAdminiBotActivity</string>

    <!-- about -->
    <string name="about_title">¿Que es Adminibot?</string>
    <string name="about_description">Registra tus gastos diarios
    y obten un resumen periodico de los movimientos de tu capital. </string>

    <!-- error messages -->
    <string name="error_empty_value">El campo es requerido</string>
    <string name="error_wrong_format_email">El formato del email es incorrecto</string>
    <string name="error_wrong_length_email">El tamaño del email es incorrecto</string>
    <string name="error_wrong_lenght_name">El nombre es demasiado largo</string>
    <string name="error_wrong_lenght_last_name">El apellido es demasiado largo</string>
    <string name="error_wrong_lenght_password">El password es demasiado largo</string>
    <string name="error_wrong_format_name">El nombre debe contener solo letras</string>
    <string name="error_wrong_format_last_name">El apellido debe contener solo letras</string>
    <string name="error_wrong_lenght_concept">El concepto es demasiado largo</string>
    <string name="error_wrong_account">El número de cuenta es incorrecto</string>
    <string name="error_wrong_lenght_check_number">El número de cheque es numérico con un máximo de 18 digitos</string>
    <string name="error_wrong_lenght_date">La longitud de la fecha es incorrecta</string>
    <string name="error_wrong_lenght_amount">La longitud del monto es incorrecta</string>
    <string name="error_wrong_lenght_issuance_code">La longitud del código de emisión es incorrecta</string>
    <string name="error_wrong_incorrect_amount">El monto debe estar compuesto de 10 enteros y 2 decimales como máximo</string>
    <string name="error_wrong_lenght_field">El campo es demasiado largo</string>
    <string name="error_wrong_only_numbers">El campo debe ser numerico</string>
    <string name="error_wrong_length_card_number">Se debe especificar 3 digitos de identificación para la tarjeta</string>
    <string name="error_wrong_brand_card">Debe seleccionar la marca de la tarjeta</string>
    <string name="error_wrong_bank">Debe seleccionar un banco</string>
    <string name="title_activity_home_activity">Adminibot!</string>

    <!-- navigation menu -->
    <string name="navigation_home_option">Bandeja de entrada</string>
    <string name="navigation_my_cards_option">Mis tarjetas</string>
    <string name="navigation_my_saving_option">Mis ahorros</string>
    <string name="navigation_accounts_option">Mis cuentas</string>
    <string name="navigation_summary_option">Resumen</string>
    <string name="navigation_title_header">Hola, yo soy <b>ADMINIBOT!</b></string>
    <string name="navigation_open_message">Open Navigation</string>
    <string name="navigation_close_message">Close Navigation</string>

    <!-- home fragment -->
    <string name="home_title_register_spending">Haz click en el botón para registrar una compra.</string>

    <!-- action bar menu -->
    <string name="action_bar_menu_notifications">Notificaciones</string>

    <!-- expenses types -->
    <string name="expenses_types_spinner_default_value">Selecciona el tipo de gasto</string>
    <string name="expenses_types_foods">Alimentos</string>
    <string name="expenses_types_clothes">Ropa</string>
    <string name="expenses_types_drinks">Alcohol</string>
    <string name="expenses_types_medicals">Médicos</string>
    <string name="expenses_types_luxuries">Lujos</string>

    <string name="expenses_types_foods_description">Cualquier alimento adquirido en tiendas departamentales,
    tiendas de auto servicio, puestos de la calle etc.</string>
    <string name="expenses_types_clothes_description">Ropa adquirida en cualquier punto de venta.</string>
    <string name="expenses_types_drinks_description">Bebidas alcohólicas de cualquier tipo</string>
    <string name="expenses_types_medicals_description">Gastos por medicamentos o consultas médicas</string>
    <string name="expenses_types_luxuries_description">Productos adquiridos no necesarios pero si deseados.</string>
    <string name="title_activity_expense_registration">Registro de gasto</string>

    <!-- expense registration -->
    <string name="expense_registration_hint_name">Nombre del gasto</string>
    <string name="expense_registration_hint_amount">Monto</string>
    <string name="expense_registration_button_register">Registrar</string>
    <string name="expense_registration_suggestion">Lleva el registro de cada uno de tus gastos realizados para que de esta
    manera tengas cifras mas precisas de tu capital :)</string>
    <string name="expense_registered_ok">El gasto se registro con exito!</string>
    <string name="expense_registered_add">+  agregar método de pago</string>
    <string name="expense_registered_remove">-  eliminar método de pago</string>

    <!-- Inbox -->
    <string name="inbox_expense_amount">Monto:</string>
    <string name="inbox_expense_payment_method">Tipo de pago:</string>
    <string name="inbox_expense_date">Pago realizado el:</string>

    <!-- payment methods types -->
    <string name="payment_methods_spinner_default_value">Selecciona un tipo de pago</string>
    <string name="payment_methods_cheque">cheque</string>
    <string name="payment_methods_food_coupons">Vales de despensa</string>
    <string name="payment_methods_cash">Efectivo</string>

    <string name="payment_methods_food_coupons_description">Vales de despensa, tarjetas o cupones</string>
    <string name="payment_methods_cash_description">Dinero en efectivo</string>
    <string name="payment_methods_cheque_description">Documento de pago</string>

    <!-- Card types -->
    <string name="credit_card">Crédito</string>
    <string name="debit_card">Débito</string>
    <string name="prepaid_card">Prepago</string>
    <string name="title_activity_card_types">Escoge el tipo de tarjeta</string>

    <string name="card_types_credit_description">Caulquier tarjeta de crédito</string>
    <string name="card_types_debit_description">Cualquier tarjeta de débito</string>
    <string name="card_types_prepaid_description">Cualquier tarjeta prepágo</string>
    <string name="title_activity_expenses_inbox">Gastos</string>

    <!-- messages -->
    <string name="success_deletion">Registro eliminado</string>
    <string name="error_deletion">Error al intentar borrar registro, intente más tarde</string>
    <string name="expenses_success_creation">Gasto agregado</string>
    <string name="expenses_error_creation">Se produjo un error al agregar gasto, intente más tarde</string>

    <!-- payment methods -->
    <string name="ic_card">Tarjeta</string>
    <string name="ic_cash">Efectivo</string>
    <string name="ic_cheque">Cheque</string>
    <string name="ic_food_coupon">Vales de despensa</string>
    <string name="title_payment_methods">Elige el método de pago</string>

    <!-- Add payment method -->
    <string name="add_pm_no_payment_methods_label">No hay métodos de pago registrados</string>
    <string name="add_pm_button">Agregar \u0020+</string>
    <string name="add_more_pm_button">Agregar más...</string>
    <string name="title_activity_add_payment_method">Agregar método de pago</string>
    <string name="title_activity_choice_payment_method">Realizar gasto con: </string>

    <!-- add card -->
    <string name="add_card_banks_hint">Elige el banco</string>
    <string name="title_activity_add_card">Agrega una nueva tarjeta</string>
    <string name="success_insertion_cc">Se agregó la tarjeta correctamente</string>
    <string name="error_insertion_cc">Se produjo un error al agregar la tarjeta</string>

    <!-- add cash -->
    <string name="title_activity_add_cash">Agregar concepto de efectivo</string>
    <string name="success_insertion_cash">Se agregó el efectivo correctamente</string>
    <string name="error_insertion_cash">Se produjo un error al agregar el efectivo</string>

    <!-- add check -->
    <string name="title_activity_add_check">Agregar cheque</string>
    <string name="success_insertion_check">Se agregó el cheque correctamente</string>
    <string name="error_insertion_check">Se produjo un error al agregar el cheque</string>

    <!-- add food coupon -->
    <string name="title_activity_add_food_coupon">Agregar vale de despensa</string>
    <string name="success_insertion_food_coupon">Se agregó el cupon correctamente</string>
    <string name="error_insertion_food_coupon">Se produjo un error al agregar el cupon</string>

    <!-- banks -->
    <string name="banks_bancomer">Bancomer</string>
    <string name="banks_banamex">Banamex</string>
    <string name="banks_banorte">Bancomer</string>
    <string name="banks_santander">Santander</string>
    <string name="banks_hsbc">HSBC</string>
    <string name="banks_wallmart">Wallmart</string>
    <string name="banks_scotiabank">Scotia bank</string>
    <string name="banks_amex">American Express</string>
    <string name="banks_bnk_azteca">Banco Azteca</string>
    <string name="banks_banregio">Banregio</string>
    <string name="banks_bancoopel">Bancoopel</string>
    <string name="banks_famsa">Banco ahorro famsa</string>

    <!-- My credit cards -->
    <string name="title_activity_my_credit_cards">Mis tarjeta de crédito</string>
    <string name="my_credit_cards_number_label">Número:</string>
    <string name="my_credit_cards_bank_label">Banco:</string>
    <string name="my_credit_cards_trademark_label">Marca:</string>
    <string name="my_credit_cards_available_credit">Crédito disponible:</string>
    <string name="my_credit_cards_credit_limit">Límite de crédito:</string>
    <string name="my_credit_cards_current_balance">Saldo actual:</string>
    <string name="my_credit_cards_cutoff_date">Fecha de corte:</string>
    <string name="my_credit_cards_payday_limit">Fecha límite de pago:</string>
    <string name="my_credit_cards_trademark">Fecha límite de pago:</string>

    <!-- Credit card detail -->
    <string name="title_activity_credit_card_detail">Detalle de tarjeta</string>
    <string name="credit_card_detail_spend">Realizar gasto</string>

    <!-- Simple item -->
    <string name="simple_item_badge">$</string>

    <!-- My cash-->
    <string name="title_my_cash_activity">Mi efectivo</string>
    <string name="total_label__my_cash_activity">Total: </string>

    <!-- My food coupons-->
    <string name="title_my_food_coupons_activity">Mis vales de despensa</string>

    <!-- action bar -->
    <string name="add_payment_method">Agregar</string>
    <string name="remove_payment_method">Eliminar</string>

</resources>
