<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_home_option" />

        <item
            android:id="@+id/my_cards"
            android:checked="false"
            android:icon="@drawable/ic_card"
            android:title="@string/navigation_my_cards_option" />

        <item
            android:id="@+id/my_savings"
            android:checked="false"
            android:icon="@drawable/ic_savings"
            android:title="@string/navigation_my_saving_option" />

        <item
            android:id="@+id/accounts"
            android:checked="false"
            android:icon="@drawable/ic_accounts"
            android:title="@string/navigation_accounts_option" />

        <item
            android:id="@+id/summary"
            android:checked="false"
            android:icon="@drawable/ic_summary"
            android:title="@string/navigation_summary_option" />

    </group>

</menu>