<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.dojogeek.adminibot.views.RegisterUserActivity"
    android:background="@color/global_background">

    <ImageView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/about_button_selector"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_above="@+id/register_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_char"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            style="@style/inputTheme"
            android:hint="@string/register_hint_name" />

        <EditText
            android:id="@+id/last_name"
            style="@style/inputTheme"
            android:hint="@string/register_hint_last_name" />

        <EditText
            android:id="@+id/email"
            style="@style/inputTheme"
            android:inputType="textEmailAddress"
            android:hint="@string/register_hint_email" />

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/register_button_ok"
            android:textSize="24sp"
            android:textColor="@color/primary_background"
            android:background="@drawable/rounded_button_selector"
            android:layout_gravity="center_horizontal"
            android:stateListAnimator="@null"/>

    </LinearLayout>

</RelativeLayout>
