<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.dojogeek.adminibot.views.LoginActivity"
    android:background="@color/global_background">

    <ImageView
        android:id="@+id/icon"
        android:layout_above="@+id/register_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_char"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            style="@style/inputTheme"
            android:hint="@string/register_hint_email" />

        <EditText
            android:id="@+id/password"
            style="@style/inputTheme"
            android:inputType="textPassword"
            android:hint="@string/login_hint_password" />


        <Button
            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/login_button_enter"
            android:textSize="24sp"
            android:textColor="@color/primary_background"
            android:background="@drawable/rounded_button_selector"
            android:layout_gravity="center_horizontal"
            android:stateListAnimator="@null"/>


    </LinearLayout>

    <TextView
        android:id="@+id/user_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_form"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/login_register_link_selector"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="70dp"
        android:background="@null"
        android:clickable="true"
        android:text="@string/login_register_now_link"/>

</RelativeLayout>
