<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context="io.dojogeek.adminibot.views.CreditCardDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/credit_card_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/notification_background"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="Santander Zero"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_card"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/credit_card_detail_badge_current_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/global_background_dark"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        android:text="$"/>

                    <TextView
                        android:id="@+id/credit_card_detail_current_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/global_background_dark"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        android:text="4900009.90"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textColor="@color/cardview_dark_background"
                        android:text="@string/my_credit_cards_number_label"/>

                    <TextView
                        android:id="@+id/credit_card_detail_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/cardview_dark_background"
                        android:text="1234"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/my_credit_cards_bank_label"/>

        <TextView
            android:id="@+id/credit_card_detail_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textColor="@color/light_grey"
            android:text="Santander"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/my_credit_cards_trademark_label"/>

        <ImageView
            android:id="@+id/credit_card_detail_trademark"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/cardview_dark_background"
            android:src="@drawable/ic_mastercard"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/my_credit_cards_available_credit"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/credit_card_detail_badge_available_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/light_grey"
                android:text="$"/>

            <TextView
                android:id="@+id/credit_card_detail_available_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/light_grey"
                android:text="7790.90"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/my_credit_cards_credit_limit"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/credit_card_detail_badge_credit_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/light_grey"
                android:text="$"/>

            <TextView
                android:id="@+id/credit_card_detail_credit_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/light_grey"
                android:text="100000.90"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/my_credit_cards_current_balance"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/credit_card_detail_badge_current_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textColor="@color/light_grey"
            android:text="$"/>

        <TextView
            android:id="@+id/credit_card_detail_current_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textColor="@color/light_grey"
            android:text="48908.90"/>

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/my_credit_cards_cutoff_date"/>

        <TextView
            android:id="@+id/credit_card_detail_cuttoff_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/light_grey"
            android:text="24/09/16"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="@color/cardview_dark_background"
                android:text="@string/my_credit_cards_payday_limit"/>

            <ImageView
                android:id="@+id/credit_card_detail_alarm"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:tint="@color/navigation_selector"
                android:src="@drawable/ic_alarm"/>

        </LinearLayout>

        <TextView
            android:id="@+id/credit_card_detail_payday_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/notification_background"
            android:text="18/10/16"/>

        <Button
            android:id="@+id/make_spending"
            style="@style/registerOkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:textSize="25sp"
            android:textColor="@color/primary_background"
            android:background="@drawable/rounded_button_selector"
            android:stateListAnimator="@null"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:text="@string/credit_card_detail_spend"/>

    </LinearLayout>

</ScrollView>
